# spatial_probing_transformer

./: .gitignore  LICENSE  README.md  attn.pt  pyproject.toml
scripts/: train.py
spatial_probing_transformer/: __init__.py  block.py  data.py  embeddings.py  model.py  prober.py  train.py  vis_utils.py
tests/: test_imports.py
