[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-probing-transformer"
version = "0.1.0"
description = "PoC: custom MHA, ViT-style patch embeddings, coordinate cross-attention probing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spatial_probing_transformer*"]
